--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
   },
   "dependencies": {
     "@bit-ocean/echarts": "^0.0.40",
+    "@tanstack/react-query": "^5.51.1",
+    "@tanstack/react-router": "^1.44.2",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "echarts": "^5.5.1",
+    "immer": "^10.1.1",
+    "lodash-es": "^4.17.21",
+    "nprogress": "^0.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@bit-ocean/auto-import": "^0.0.40",
@@ -31,7 +39,15 @@
     "@bit-ocean/tsconfig": "^0.0.40",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@iconify/json": "^2.2.226",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
+    "@tanstack/react-query-devtools": "^5.51.1",
+    "@tanstack/router-devtools": "^1.44.4",
+    "@tanstack/router-plugin": "^1.44.3",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.10",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
@@ -47,7 +63,10 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
     "unplugin-auto-import": "^0.18.0",
-    "vite": "^5.3.3"
+    "unplugin-icons": "^0.19.0",
+    "unplugin-turbo-console": "1.9.3-beta.1",
+    "vite": "^5.3.3",
+    "vite-plugin-webfont-dl": "^3.9.4"
   },
   "config": {
     "commitizen": {
