--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "use-immer": "^0.10.0"
+    "use-immer": "^0.10.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@bit-ocean/auto-import": "^0.0.40",
