--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "echarts": "^5.5.1",
+    "framer-motion": "^11.3.2",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
