--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.19",
     "commitizen": "^4.3.0",
