fix: :bug: polyfill `AbortController` and `ResizeObserver`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@bit-ocean/tsconfig/react",
   "compilerOptions": {
+    "target": "ES2015",
     "paths": {
       "@/*": ["./src/*"]
     }
