--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@bit-ocean/echarts": "^0.0.42",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-router": "^1.44.2",
+    "abortcontroller-polyfill": "^1.7.5",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "echarts": "^5.5.1",
@@ -28,7 +29,9 @@
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resize-observer-polyfill": "^1.5.1",
     "use-immer": "^0.10.0",
+    "vconsole": "^3.15.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
