chore: :hammer: bump deps

--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@bit-ocean/echarts": "^0.0.42",
-    "@tanstack/react-query": "^5.51.1",
-    "@tanstack/react-router": "^1.44.2",
+    "@bit-ocean/echarts": "^0.0.48",
+    "@tanstack/react-query": "^5.51.21",
+    "@tanstack/react-router": "^1.46.4",
     "abortcontroller-polyfill": "^1.7.5",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
+    "dayjs": "^1.11.12",
     "echarts": "^5.5.1",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^11.3.21",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
@@ -35,43 +35,43 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@bit-ocean/auto-import": "^0.0.42",
-    "@bit-ocean/cli": "^0.0.42",
-    "@bit-ocean/commitlint-config": "^0.0.42",
-    "@bit-ocean/cspell": "^0.0.42",
-    "@bit-ocean/eslint-config": "^0.0.42",
-    "@bit-ocean/prettier-config": "^0.0.42",
-    "@bit-ocean/tsconfig": "^0.0.42",
+    "@bit-ocean/auto-import": "^0.0.48",
+    "@bit-ocean/cli": "^0.0.48",
+    "@bit-ocean/commitlint-config": "^0.0.48",
+    "@bit-ocean/cspell": "^0.0.48",
+    "@bit-ocean/eslint-config": "^0.0.48",
+    "@bit-ocean/prettier-config": "^0.0.48",
+    "@bit-ocean/tsconfig": "^0.0.48",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@iconify/json": "^2.2.226",
+    "@iconify/json": "^2.2.234",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@tanstack/react-query-devtools": "^5.51.1",
-    "@tanstack/router-devtools": "^1.44.4",
-    "@tanstack/router-plugin": "^1.44.3",
+    "@tanstack/react-query-devtools": "^5.51.21",
+    "@tanstack/router-devtools": "^1.46.5",
+    "@tanstack/router-plugin": "^1.45.13",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.14.10",
+    "@types/node": "^22.1.0",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.0",
-    "cspell": "^8.10.4",
-    "cz-git": "^1.9.3",
+    "cspell": "^8.13.1",
+    "cz-git": "^1.9.4",
     "eslint": "^8.57.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8.4.39",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
+    "postcss": "^8.4.40",
     "sass": "^1.77.8",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
-    "unplugin-auto-import": "^0.18.0",
-    "unplugin-icons": "^0.19.0",
-    "unplugin-turbo-console": "1.9.3-beta.1",
-    "vite": "^5.3.3",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-icons": "^0.19.1",
+    "unplugin-turbo-console": "1.10.1",
+    "vite": "^5.3.5",
     "vite-plugin-webfont-dl": "^3.9.4"
   },
   "config": {
