--- a/package.json
+++ b/package.json
@@ -16,63 +16,66 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@bit-ocean/echarts": "^0.0.48",
-    "@tanstack/react-query": "^5.51.21",
-    "@tanstack/react-router": "^1.46.4",
-    "abortcontroller-polyfill": "^1.7.5",
+    "@bit-ocean/echarts": "^0.0.50",
+    "@bit-ocean/utils": "^0.0.50",
+    "@tanstack/react-query": "^5.62.8",
+    "@tanstack/react-router": "^1.91.3",
+    "abortcontroller-polyfill": "^1.7.8",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
-    "framer-motion": "^11.3.21",
+    "framer-motion": "^11.15.0",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resize-observer-polyfill": "^1.5.1",
-    "use-immer": "^0.10.0",
+    "use-immer": "^0.11.0",
     "vconsole": "^3.15.1",
-    "zustand": "^4.5.4"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@bit-ocean/auto-import": "^0.0.48",
-    "@bit-ocean/cli": "^0.0.48",
-    "@bit-ocean/commitlint-config": "^0.0.48",
-    "@bit-ocean/cspell": "^0.0.48",
-    "@bit-ocean/eslint-config": "^0.0.48",
-    "@bit-ocean/prettier-config": "^0.0.48",
-    "@bit-ocean/tsconfig": "^0.0.48",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@iconify/json": "^2.2.234",
+    "@bit-ocean/auto-import": "^0.0.50",
+    "@bit-ocean/cli": "^0.0.50",
+    "@bit-ocean/commitlint-config": "^0.0.50",
+    "@bit-ocean/cspell": "^0.0.50",
+    "@bit-ocean/eslint-config": "^0.0.50",
+    "@bit-ocean/prettier-config": "^0.0.50",
+    "@bit-ocean/tsconfig": "^0.0.50",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@iconify/json": "^2.2.286",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@tanstack/react-query-devtools": "^5.51.21",
-    "@tanstack/router-devtools": "^1.46.5",
-    "@tanstack/router-plugin": "^1.45.13",
+    "@tanstack/react-query-devtools": "^5.62.8",
+    "@tanstack/router-devtools": "^1.91.3",
+    "@tanstack/router-plugin": "^1.91.1",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.10.2",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-legacy": "^5.4.1",
-    "@vitejs/plugin-react-swc": "^3.7.0",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-legacy": "^5.4.3",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
-    "commitizen": "^4.3.0",
-    "cspell": "^8.13.1",
-    "cz-git": "^1.9.4",
+    "commitizen": "^4.3.1",
+    "cspell": "^8.17.1",
+    "cz-git": "^1.11.0",
     "eslint": "^8.57.0",
-    "husky": "^9.1.4",
-    "lint-staged": "^15.2.8",
-    "postcss": "^8.4.40",
-    "sass": "^1.77.8",
-    "tailwindcss": "^3.4.7",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
+    "postcss": "^8.4.49",
+    "sass": "^1.83.0",
+    "tailwindcss": "^3.4.17",
+    "tslib": "^2.8.1",
     "typescript": "^5.5.4",
-    "unplugin-auto-import": "^0.18.2",
-    "unplugin-icons": "^0.19.1",
-    "unplugin-turbo-console": "1.10.1",
+    "unplugin-auto-import": "^0.18.5",
+    "unplugin-icons": "^0.22.0",
+    "unplugin-turbo-console": "1.11.0",
     "vite": "^5.3.5",
-    "vite-plugin-webfont-dl": "^3.9.4"
+    "vite-plugin-webfont-dl": "^3.10.3"
   },
   "config": {
     "commitizen": {
