--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@bit-ocean/echarts": "^0.0.50",
+    "@bit-ocean/hooks": "^0.0.50",
     "@bit-ocean/utils": "^0.0.50",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-router": "^1.91.3",
