--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "@bit-ocean/echarts": "^0.0.50",
     "@bit-ocean/hooks": "^0.0.50",
     "@bit-ocean/utils": "^0.0.50",
-    "@tanstack/react-query": "^5.62.8",
-    "@tanstack/react-router": "^1.91.3",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-router": "^1.111.6",
     "abortcontroller-polyfill": "^1.7.8",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^12.4.7",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
@@ -37,7 +37,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "use-immer": "^0.11.0",
     "vconsole": "^3.15.1",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@bit-ocean/auto-import": "^0.0.50",
@@ -49,37 +49,37 @@
     "@bit-ocean/tsconfig": "^0.0.50",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
-    "@iconify/json": "^2.2.286",
+    "@iconify/json": "^2.2.310",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@tanstack/react-query-devtools": "^5.62.8",
-    "@tanstack/router-devtools": "^1.91.3",
-    "@tanstack/router-plugin": "^1.91.1",
+    "@tanstack/react-query-devtools": "^5.66.9",
+    "@tanstack/router-devtools": "^1.111.6",
+    "@tanstack/router-plugin": "^1.111.6",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.13.5",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.3.17",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-legacy": "^5.4.3",
-    "@vitejs/plugin-react-swc": "^3.7.2",
+    "@vitejs/plugin-legacy": "^6.0.1",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
-    "cspell": "^8.17.3",
+    "cspell": "^8.17.5",
     "cz-git": "^1.11.0",
     "eslint": "^8.57.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
-    "postcss": "^8.4.49",
-    "sass": "^1.83.0",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.3",
+    "sass": "^1.85.0",
+    "tailwindcss": "3.4.17",
     "tslib": "^2.8.1",
-    "typescript": "^5.5.4",
-    "unplugin-auto-import": "^0.18.5",
-    "unplugin-icons": "^0.22.0",
-    "unplugin-turbo-console": "1.11.0",
-    "vite": "^5.3.5",
-    "vite-plugin-webfont-dl": "^3.10.3"
+    "typescript": "^5.7.3",
+    "unplugin-auto-import": "^19.1.0",
+    "unplugin-icons": "^22.1.0",
+    "unplugin-turbo-console": "1.11.3",
+    "vite": "^6.1.1",
+    "vite-plugin-webfont-dl": "^3.10.4"
   },
   "config": {
     "commitizen": {
