--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "postcss": "^8.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.85.0",
     "tailwindcss": "3.4.17",
     "tslib": "^2.8.1",
