--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "sass": "^1.85.1",
     "tailwindcss": "3.4.17",
     "tslib": "^2.8.1",
-    "typescript": "5.7.3",
+    "typescript": "~5.6.3",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-icons": "^22.1.0",
     "unplugin-turbo-console": "1.11.3",
