--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "resize-observer-polyfill": "^1.5.1",
     "use-immer": "^0.11.0",
